--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = "0.4.41"
 clap = { version = "4.5.38", features = ["derive"] }
+regex = "1.11.1"
 walkdir = "2.3"
 
 [dev-dependencies]
