--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 chrono = "0.4.41"
 clap = { version = "4.5.38", features = ["derive"] }
 regex = "1.11.1"
+tempfile = "3.3"
 walkdir = "2.3"
 
 [dev-dependencies]
