--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,21 @@
 [package]
-name = "file_renamer"
+name = "ichimonji"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+assert_cmd = "2.0.17"
 chrono = "0.4.41"
 clap = { version = "4.5.38", features = ["derive"] }
+predicates = "3.1.3"
 regex = "1.11.1"
 tempfile = "3.3"
 walkdir = "2.3"
 
 [dev-dependencies]
 tempfile = "3.3"
+
+[[bin]]
+name = "ichimonji"
+path = "src/main.rs"
